RESOLVED FIXED 93041
V8Proxy::currentContext() doesn't do anything and should be removed
https://bugs.webkit.org/show_bug.cgi?id=93041
Summary V8Proxy::currentContext() doesn't do anything and should be removed
Adam Barth
Reported 2012-08-02 16:18:34 PDT
V8Proxy::currentContext() doesn't do anything and should be removed
Attachments
Patch (7.22 KB, patch)
2012-08-02 16:19 PDT, Adam Barth
no flags
Adam Barth
Comment 1 2012-08-02 16:19:22 PDT
Eric Seidel (no email)
Comment 2 2012-08-02 16:20:45 PDT
Comment on attachment 156193 [details] Patch OK.
WebKit Review Bot
Comment 3 2012-08-02 17:45:44 PDT
Comment on attachment 156193 [details] Patch Clearing flags on attachment: 156193 Committed r124542: <http://trac.webkit.org/changeset/124542>
WebKit Review Bot
Comment 4 2012-08-02 17:45:48 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.