Source/WebCore/bindings/v8/V8Proxy.h
@@ -222,7 +222,6 @@ namespace WebCore {
         // a new context. It is potentially slow and consumes memory.
         static v8::Local<v8::Context> context(Frame*);
         static v8::Local<v8::Context> mainWorldContext(Frame*);
-        static v8::Local<v8::Context> currentContext();
 
         // If the current context causes out of memory, JavaScript setting
         // is disabled and it returns true.
